Updated check for user's roles, added a method in dao for retrieve all father categories and added a servlet that shows them, updated exception handling and template